# qr-payment-vn

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  database.py  main.py  models.py  schemas.py  worker.py
app/api/: bank.py  orders.py  webhooks.py
app/services/: events.py  matcher.py  order_codes.py  poller.py  qr.py
app/services/banking/: __init__.py  acb_client.py  base.py  mbbank_client.py  tpbank_client.py
app/services/parsers/: __init__.py  base.py
app/static/: checkout.html  index.html
docs/: acb-setup.md  android-sms-forwarder.md  mbbank-setup.md  tpbank-setup.md
tests/: test_acb_client.py  test_api.py  test_banking_factory.py  test_matcher.py  test_mbbank_helpers.py  test_parsers.py  test_poller.py  test_tpbank_client.py
